- add more infos to readme - add UID, GID and USER ENV var to Dockerfile to prevent permission issues